<resources>
    <string name="app_name">Food_Calendar</string>
    <string name="current_weight">Current Weight:</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="desired_weight">Desired Weight:</string>
    <string name="progress_towards_goal">Progress Towards Goal</string>
    <string name="settings">Settings</string>
    <string name="drawer_content_description">Opens the navigation menu</string>
    <string name="logout">Logout</string>
    <string name="add_meal_title">Add Meal</string>
    <string name="meal_name_hint">Enter Meal Name</string>
    <string name="meal_time_hint">Enter Meal Time</string>
    <string name="add_meal_button_text">Add Meal</string>
    <string name="save">Save</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="home">Home</string>
    <string name="go_to_today">Go to Today</string>
    <string name="add_meal">Add Meal</string>







</resources>
