<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_meal_title"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginBottom="@dimen/default_margin" />

    <EditText
        android:id="@+id/meal_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meal_name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/meal_time_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meal_time_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/add_meal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/add_meal_button_text" />

</LinearLayout>
